# stepic_lc

./: .gitignore  Makefile  README.md  pyproject.toml
src/1-console-chat-bot/: bot.py  chains.py
src/2-prompt-engineering/: chain_on_messages.py  dynamic_few_shot.py  few_shot_simple.py  prompts.yaml  prompts_store_yaml.py  valid_json_out.py
src/2-prompt-engineering/few_shot/: few_shot_simple.py
src/2-prompt-engineering/final_task/: few_shot.py  prompts.yaml
src/2-prompt-engineering/tone/: llm_check.py  repeatable_role.py  role_in_the_beginning.py  static_check.py
src/3-rag/: 2step_rag.py  agentic_rag.py  simple.py
src/3-rag/chunk_sizes/: chunker.py  evaluators.py  llm_assessor.py  utils.py
src/3-rag/data_prep/: chain_integration.py  clean_n_dedup.py  dedup_with_cosine_similarity.py  tables.py
src/3-rag/eval/: eval_answer_quality_with_llm.py  eval_answer_quality_with_ragas.py  eval_search_recall_precision_k.py  question_gen.py
src/3-rag/eval_test/: eval.py  eval_data.py
src/3-rag/loaders/: load_and_put_to_vectors.py  load_csv.py  load_dir_files.py  load_docx.py  load_json.py  load_md_adv.py  load_md_simple.py  load_pdf_adv.py  load_pdf_simple.py  web_page_to_txt.py  web_page_to_txt_withbs.py
src/3-rag/rag_faiss_demo/: README.md  loaders.py  preprosess.py  tea_guide.py
src/3-rag/vector_store_task/: tea_guide.py
src/3-rag/vector_store_task/data/: bm25_index.pkl
src/3-rag/vector_store_task/data/tea_index/: index.faiss  index.pkl
